# streamlit-speech-to-text

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pull_request_template.md  pyproject.toml
app/: .01_✨_Model_App.py.swp  01_✨_Model_App.py
app/pages/: 02_Real_Time.py
app/utils/: audio.py  init.py  recorder.py
docs/: design_doc.md  index.md
profiling/: __init__.py  confprofiling.py  streamlit-speech-to-text_profiling.py
streamlit-speech-to-text/: __init__.py
tests/: test_streamlit-speech-to-text.py
{{cookiecutter.project}}/: Makefile  README.md  mkdocs.yml  pull_request_template.md  pyproject.toml
{{cookiecutter.project}}/docs/: design_doc.md  index.md
{{cookiecutter.project}}/profiling/: __init__.py
{{cookiecutter.project}}/tests/: test_{{cookiecutter.project}}.py
{{cookiecutter.project}}/{{cookiecutter.project}}/: __init__.py
